--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -128,13 +128,13 @@ services:
       "
 
   # Comment this if you already have a reverse proxy running
-  nginx:
-    container_name: nginx
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    ports:
-      - ${NGINX_PORT}:80
-    depends_on:
-      - plane-web
-      - plane-api
+  # nginx:
+  #   container_name: nginx
+  #   build:
+  #     context: ./nginx
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - ${NGINX_PORT}:80
+  #   depends_on:
+  #     - plane-web
+  #     - plane-api
