--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,8 +75,8 @@ services:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       GPT_ENGINE: ${GPT_ENGINE}
       SECRET_KEY: ${SECRET_KEY}
-      DEFAULT_EMAIL: ${DEFAULT_EMAIL}
-      DEFAULT_PASSWORD: ${DEFAULT_PASSWORD}
+      DEFAULT_EMAIL: ${ADMIN_EMAIL}
+      DEFAULT_PASSWORD: ${ADMIN_PASSWORD}
       USE_MINIO: 1
     depends_on:
       - plane-api
