--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     command: /usr/local/bin/start.sh
     environment:
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL}/api
       NEXT_PUBLIC_GOOGLE_CLIENTID: 0
       NEXT_PUBLIC_GITHUB_APP_NAME: 0
       NEXT_PUBLIC_GITHUB_ID: 0
