--- a/elestio.yml
+++ b/elestio.yml
@@ -23,7 +23,25 @@ ports:
     public: true
     path: "/"
     isAuth: false
+  - protocol: "HTTPS"
+    targetProtocol: "HTTP"
+    listeningPort: "6443"
+    targetPort: "8145"
+    targetIP: "172.17.0.1"
+    public: true
+    path: "/"
+    isAuth: false
+  - protocol: "TCP"
+    targetProtocol: "TCP"
+    listeningPort: "25432"
+    targetIP: "172.17.0.1"
+    targetPort: "2489"
+    public: true
 environments:
+  - key: "DEBUG"
+    value: "0"
+  - key: "SENTRY_DSN"
+    value: ""
   - key: "NEXT_PUBLIC_API_BASE_URL"
     value: "https://[CI_CD_DOMAIN]"
   - key: "SOFTWARE_VERSION_TAG"
@@ -40,14 +58,30 @@ environments:
     value: "[EMAIL]"
   - key: "ADMIN_PASSWORD"
     value: "random_password"
+  - key: "DEFAULT_EMAIL"
+    value: "[EMAIL]"
+  - key: "DEFAULT_PASSWORD"
+    value: "random_password"
   - key: "SECRET_KEY"
     value: "random_password"
   - key: "EMAIL_HOST"
     value: "172.17.0.1"
+  - key: "EMAIL_HOST_USER"
+    value: ""
+  - key: "EMAIL_HOST_PASSWORD"
+    value: ""
   - key: "EMAIL_PORT"
     value: "25"
   - key: "EMAIL_FROM"
     value: "[DOMAIN]@vm.elestio.app"
+  - key: "EMAIL_USE_TLS"
+    value: "0"
+  - key: "EMAIL_USE_SSL"
+    value: "0"
+  - key: "AWS_REGION"
+    value: ""
+  - key: "AWS_S3_ENDPOINT_URL"
+    value: "http://plane-minio:9000"
   - key: "FILE_SIZE_LIMIT"
     value: "5242880"
   - key: "AWS_ACCESS_KEY_ID"
@@ -58,6 +92,14 @@ environments:
     value: "uploads"
   - key: "WEB_URL"
     value: "https://[CI_CD_DOMAIN]"
+  - key: "DOCKERIZED"
+    value: "1"
+  - key: "USE_MINIO"
+    value: "1"
+  - key: "ENABLE_SIGNUP"
+    value: "1"
+  - key: "NGINX_PORT"
+    value: "80"
 
 config:
   runTime: "dockerCompose"
@@ -79,5 +121,9 @@ lifeCycleConfig:
 webUI:
   - url: "https://[CI_CD_DOMAIN]"
     label: "Plane Admin"
+    login: "[ADMIN_EMAIL]"
+    password: "[ADMIN_PASSWORD]"
+  - url: "https://[CI_CD_DOMAIN]:8443"
+    label: "PgAdmin"
     login: "[ADMIN_EMAIL]"
     password: "[ADMIN_PASSWORD]"
