--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ x-api-and-worker-env: &api-and-worker-env
   ENABLE_SIGNUP: ${ENABLE_SIGNUP}
 
 services:
-  plane-web:
+  planefrontend:
     image: makeplane/plane-frontend:latest
     restart: always
     command: /usr/local/bin/start.sh apps/app/server.js app
@@ -51,10 +51,10 @@ services:
       NEXT_PUBLIC_ENABLE_SESSION_RECORDER: "0"
       NEXT_PUBLIC_TRACK_EVENTS: "0"
     depends_on:
-      - plane-api
+      - planebackend
       - plane-worker
 
-  plane-api:
+  planebackend:
     image: makeplane/plane-backend:latest
     restart: always
     command: ./bin/takeoff
@@ -75,7 +75,7 @@ services:
     environment:
       <<: *api-and-worker-env
     depends_on:
-      - plane-api
+      - planebackend
       - plane-db
       - plane-redis
 
@@ -88,7 +88,7 @@ services:
     environment:
       <<: *api-and-worker-env
     depends_on:
-      - plane-api
+      - planebackend
       - plane-db
       - plane-redis
 
@@ -145,9 +145,11 @@ services:
     environment:
       FILE_SIZE_LIMIT: ${FILE_SIZE_LIMIT:-5242880}
       BUCKET_NAME: ${AWS_S3_BUCKET_NAME:-uploads}
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - plane-web
-      - plane-api
+      - planefrontend
+      - planebackend
 
   pgadmin4:
     image: dpage/pgadmin4:latest
