--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,12 +8,15 @@ server {
     listen       80;
     root   /www/data/;
     access_log /var/log/nginx/access.log;
+
+    client_max_body_size 5242880;
+
     location / {
-        proxy_pass http://plane-web:3000/;       
+        proxy_pass http://planefrontend:3000/;       
     }
 
     location /api/ {
-        proxy_pass http://plane-api:8000/api/;
+        proxy_pass http://planebackend:8000/api/;
     }
 
    location /uploads/ {
