--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,8 @@ services:
   planefrontend:
     image: makeplane/plane-frontend:${SOFTWARE_VERSION_TAG}
     restart: always
-    command: /usr/local/bin/start.sh apps/app/server.js app
+    # command: /usr/local/bin/start.sh apps/app/server.js app
+    command: /usr/local/bin/start.sh web/server.js web
     env_file:
       - .env
     environment:
