added missing restartalways

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -138,6 +138,7 @@ services:
   # Comment this if you already have a reverse proxy running
   plane-proxy:
     image: makeplane/plane-proxy:${SOFTWARE_VERSION_TAG}
+    restart: always
     ports:
       - 172.17.0.1:2845:80
     env_file:
