--- a/tests/apiserver/.env
+++ b/tests/apiserver/.env
@@ -1,7 +1,7 @@
 TEST_URL=http://172.17.0.1:2845
 
 DEBUG=0
-NEXT_PUBLIC_API_BASE_URL=https://[CI_CD_DOMAIN]
+NEXT_PUBLIC_API_BASE_URL=localhost
 SOFTWARE_VERSION_TAG=latest
 PGDATABASE=plane
 PGUSER=postgres
@@ -22,7 +22,7 @@ FILE_SIZE_LIMIT=5242880
 AWS_ACCESS_KEY_ID=minio
 AWS_SECRET_ACCESS_KEY=b0jv70JZ-BmoZ-NhVwJIQT
 AWS_S3_BUCKET_NAME=uploads
-WEB_URL=https://[CI_CD_DOMAIN]
+WEB_URL=http://localhost
 DOCKERIZED=1
 USE_MINIO=1
 ENABLE_SIGNUP=1
