--- a/tests/frontend/.env
+++ b/tests/frontend/.env
@@ -1,7 +1,7 @@
 TEST_URL=http://172.17.0.1:2845
 
 DEBUG=0
-NEXT_PUBLIC_API_BASE_URL=https://[CI_CD_DOMAIN]
+NEXT_PUBLIC_API_BASE_URL=http://localhost
 SOFTWARE_VERSION_TAG=latest
 PGDATABASE=plane
 PGUSER=postgres
@@ -22,8 +22,42 @@ FILE_SIZE_LIMIT=5242880
 AWS_ACCESS_KEY_ID=minio
 AWS_SECRET_ACCESS_KEY=b0jv70JZ-BmoZ-NhVwJIQT
 AWS_S3_BUCKET_NAME=uploads
-WEB_URL=https://[CI_CD_DOMAIN]
+WEB_URL=http://localhost
 DOCKERIZED=1
 USE_MINIO=1
 ENABLE_SIGNUP=1
 NGINX_PORT=80
+
+
+# Redis Settings
+REDIS_HOST="plane-redis"
+REDIS_PORT="6379"
+REDIS_URL="redis://${REDIS_HOST}:6379/"
+
+# Database Settings
+DATABASE_URL=postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}/${PGDATABASE}
+
+# Gunicorn Workers
+GUNICORN_WORKERS=2
+
+# Settings related to Docker
+DOCKERIZED=1 # deprecated
+
+# set to 1 If using the pre-configured minio setup
+USE_MINIO=1
+
+# Nginx Configuration
+NGINX_PORT=80
+
+
+# SignUps
+ENABLE_SIGNUP="1"
+
+# Enable Email/Password Signup
+ENABLE_EMAIL_PASSWORD="1"
+
+# Enable Magic link Login
+ENABLE_MAGIC_LINK_LOGIN="0"
+
+# Email redirections and minio domain settings
+WEB_URL="http://localhost"
