--- a/tests/frontend/.env
+++ b/tests/frontend/.env
@@ -1,7 +1,7 @@
-TEST_URL=http://172.17.0.1:2845
+TEST_URL=http://172.17.0.1:4000/god-mode
 
 DEBUG=0
-NEXT_PUBLIC_API_BASE_URL=http://localhost
+NEXT_PUBLIC_API_BASE_URL=http://172.17.0.1
 SOFTWARE_VERSION_TAG=latest
 PGDATABASE=plane
 PGUSER=postgres
@@ -22,7 +22,6 @@ FILE_SIZE_LIMIT=5242880
 AWS_ACCESS_KEY_ID=minio
 AWS_SECRET_ACCESS_KEY=b0jv70JZ-BmoZ-NhVwJIQT
 AWS_S3_BUCKET_NAME=uploads
-WEB_URL=http://localhost
 DOCKERIZED=1
 USE_MINIO=1
 ENABLE_SIGNUP=1
@@ -60,4 +59,4 @@ ENABLE_EMAIL_PASSWORD="1"
 ENABLE_MAGIC_LINK_LOGIN="0"
 
 # Email redirections and minio domain settings
-WEB_URL="http://localhost"
+WEB_URL="http://172.17.0.1"
