--- a/elestio.yml
+++ b/elestio.yml
@@ -45,7 +45,7 @@ environments:
   - key: "NEXT_PUBLIC_API_BASE_URL"
     value: "https://[CI_CD_DOMAIN]"
   - key: "SOFTWARE_VERSION_TAG"
-    value: "0.11"
+    value: "latest"
   - key: "PGDATABASE"
     value: "plane"
   - key: "PGUSER"
@@ -73,7 +73,7 @@ environments:
   - key: "EMAIL_PORT"
     value: "25"
   - key: "EMAIL_FROM"
-    value: "[DOMAIN]@vm.elestio.app"
+    value: "'Plane <[DOMAIN]@vm.elestio.app>'"
   - key: "EMAIL_USE_TLS"
     value: "0"
   - key: "EMAIL_USE_SSL"
