--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ x-app-env: &app-env
     - NGINX_PORT=${NGINX_PORT:-80}
     - WEB_URL=${WEB_URL}
     - DEBUG=${DEBUG}
-    - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE:-plane.settings.production} # deprecated
-    - NEXT_PUBLIC_DEPLOY_URL=${NEXT_PUBLIC_DEPLOY_URL} # deprecated
+    - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE:-plane.settings.production}
+    - NEXT_PUBLIC_DEPLOY_URL=${NEXT_PUBLIC_DEPLOY_URL}
     - SENTRY_DSN=${SENTRY_DSN}
     - SENTRY_ENVIRONMENT=${SENTRY_ENVIRONMENT:-"production"}
     - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID:-""}
     - GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID:-""}
     - GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET:-""}
-    - DOCKERIZED=${DOCKERIZED:-1} # deprecated
+    - DOCKERIZED=${DOCKERIZED:-1}
     - CORS_ALLOWED_ORIGINS=${NEXT_PUBLIC_API_BASE_URL}
     # Gunicorn Workers
     - GUNICORN_WORKERS=${GUNICORN_WORKERS:-2}
@@ -137,16 +137,6 @@ services:
     volumes:
       - ./uploads:/export
 
-  # createbuckets:
-  #   image: minio/mc
-  #   entrypoint: >
-  #     /bin/sh -c " /usr/bin/mc config host add plane-minio http://plane-minio:9000 \root \$ADMIN_PASSWORD; /usr/bin/mc mb plane-minio/\uploads; /usr/bin/mc anonymous set download plane-minio/\uploads; exit 0; "
-  #   env_file:
-  #     - .env
-  #   depends_on:
-  #     - plane-minio
-
-  # Comment this if you already have a reverse proxy running
   proxy:
     <<: *app-env
     image: makeplane/plane-proxy:${SOFTWARE_VERSION_TAG}
