--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ x-app-env: &app-env
     - POSTGRES_PASSWORD=${PGPASSWORD}
     - POSTGRES_DB=${PGDATABASE}
     - PGDATA=${PGDATA:-/var/lib/postgresql/data}
-    - DATABASE_URL=postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}:5432/${PGDATABASE}
+    - DATABASE_URL=postgresql://${PGUSER}:${PGPASSWORD}@${PGHOST}:5432/${PGDATABASE}?currentSchema=${PGSCHEMA:-public}
     # REDIS SETTINGS
     - REDIS_HOST=plane-redis
     - REDIS_PORT=6379
@@ -51,8 +51,8 @@ x-app-env: &app-env
     # DATA STORE SETTINGS
     - USE_MINIO=1
     - AWS_REGION=${AWS_REGION:-""}
-    - AWS_ACCESS_KEY_ID=root
-    - AWS_SECRET_ACCESS_KEY=${ADMIN_PASSWORD}
+    - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-root}
+    - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:-ADMIN_PASSWORD}
     - AWS_S3_ENDPOINT_URL=${AWS_S3_ENDPOINT_URL:-http://plane-minio:9000}
     - AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME:-uploads}
     - MINIO_ROOT_USER=root
