--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,7 +20,7 @@ server {
     }
 
    location /uploads/ {
-        proxy_pass http://plane-minio:9000/uploads/;
+        proxy_pass https://minio-storage-u5953.vm.elestio.app:34256/media/;
     }
 }
 }
